[dyad] Fixed timeline alignment and updated track control theme - wrote 4 file(s)

--- a/src/ui/Arrangement.module.css
+++ b/src/ui/Arrangement.module.css
@@ -15,7 +15,7 @@
   min-width: 20rem;
   width: auto;
   height: auto;
-  background-color: hsl(222 12% 18%);
+  background-color: hsl(0 0% 100%);
 }
 
 .timelineRow {
@@ -24,7 +24,7 @@
   min-height: 2rem;
   overflow-y: hidden;
   flex: 0;
-  border-bottom: 1px solid hsl(217 19% 27%);
+  border-bottom: 1px solid hsl(214.3 31.8% 91.4%);
 }
 
 .timelineScroll {
@@ -56,7 +56,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: hsl(222 12% 15%);
+  background-color: hsl(210 40% 96.1%);
+  border-right: 1px solid hsl(214.3 31.8% 91.4%);
 }
 
 .trackScroll {
